Fixed ContextFeatureScorer.java print out line to use Java 17 functions.