@@ -53,7 +53,7 @@ public class ContextFeatureScorerTest {
 			assertNotNull(partitionedFeatures);
 			
 			System.out.println(partitionedFeatures.size() + " features scored and partitioned.");
-			System.out.println("Last feature in the list: " + partitionedFeatures.getLast());
+			System.out.println("Last feature in the list: " + partitionedFeatures.get(partitionedFeatures.size() - 1));
 			
 		Path referenceOutput = Paths.get(baseName + "_reference.features.txt");
 		Path backgroundOutput = Paths.get(baseName + "_background.features.txt");
